domain/src/main/java/com/example/clean_architecture/domain/core/error/DefaultFailure.kt
package com.example.clean_architecture.domain.core.error

data class DefaultFailure(
    val exception: Exception,
) : Failure